Summary of important user-visible changes for queueing-1.2.1
------------------------------------------------------------------------------

** queueing-1.2.1 contains new features

** Function qnvisits() has been deprecated, and is replaced by
   qncsvisits(), qnosvisits() (for single-class networks) and
   qncmvisits(), qnomvisits() (for multiple-class networks). The new
   functions allow the user to specify the reference station.


Summary of important user-visible changes for queueing-1.2.0
------------------------------------------------------------------------------

** queueing-1.2.0 includes many bug fixes and new features

** The documentation has been restructured, hopefully improving
   readability and overall organization

** Added functions to compute various kinds of performance bounds on
   multiclass networks; balanced system, asymptotic and composite
   bounds are supported.

** Added function qnom for analyzing open, multiclass product-form
   networks.

** Adopted a new scheme for naming functions; old names are still
   available for compatibility with existing scripts, but will be
   removed in future releases.

** Fixed bugs in qncscmva, qncsconv, qncsconvld, qnopensingle,
   qnopenmulti and qncmmva


Summary of important user-visible changes for queueing-1.1.1
------------------------------------------------------------------------------

** queueing-1.1.1 is a bug fix release

** Increased tolerance in tests for dtmc_fpt and dtmc_mtta to avoid
   spurious failures on some platforms

** Set "Autoload: no" in the DESCRIPTION file. This means that this
   package is no longer automatically loaded on Octave startup. To use
   the queueing package you need to issue the command "pkg load
   queueing" at the Octave prompt.


Summary of important user-visible changes for queueing-1.1.0
------------------------------------------------------------------------------

** Function ctmc_exps() can now compute the expected sojourn time