@@ -16,7 +16,7 @@ later, as published by the Free Software Foundation.
 1.1 Installation through Octave package management system
 =========================================================
 
-The most recent version of `queueing' is 1.2.1 and can be downloaded
+The most recent version of `queueing' is 1.2.2 and can be downloaded
 from Octave-Forge
 
    `http://octave.sourceforge.net/queueing/'
@@ -48,7 +48,7 @@ from Octave-Forge
      Octave-Forge; then, to install the package in the system-wide
      location issue this command at the Octave prompt:
 
-          octave:1> pkg install _queueing-1.2.1.tar.gz_
+          octave:1> pkg install _queueing-1.2.2.tar.gz_
 
      (you may need to start Octave as root in order to allow the
      installation to copy the files to the target locations). After
@@ -57,7 +57,7 @@ from Octave-Forge
 
      If you do not have root access, you can do a local install using:
 
-          octave:1> pkg install -local queueing-1.2.1.tar.gz
+          octave:1> pkg install -local queueing-1.2.2.tar.gz
 
           Note: Octave version 3.2.3 as shipped with Ubuntu 10.04 LTS
           seems to ignore `-local' and always tries to install the
@@ -70,7 +70,7 @@ from Octave-Forge
           octave:1>pkg list queueing
           Package Name  | Version | Installation directory
           --------------+---------+-----------------------
-              queueing  |   1.2.1 | /home/moreno/octave/queueing-1.2.1
+              queueing  |   1.2.2 | /home/moreno/octave/queueing-1.2.2
 
   4. Starting from version 1.1.1, `queueing' is no longer automatically
      loaded on Octave startup. To make the functions available for use,
@@ -94,8 +94,8 @@ from Octave-Forge
 If you want to manually install `queueing' in a custom location, you
 can download the tarball and unpack it somewhere:
 
-     tar xvfz queueing-1.2.1.tar.gz
-     cd queueing-1.2.1/queueing/
+     tar xvfz queueing-1.2.2.tar.gz
+     cd queueing-1.2.2/queueing/
 
    Copy all `.m' files from the `inst/' directory to some target
 location. Then, start Octave with the `-p' option to add the target
