@@ -1,3 +1,15 @@
+Summary of important user-visible changes for queueing-1.2.2
+------------------------------------------------------------------------------
+
+** queueing-1.2.2 is a bug fix release
+
+** Fixed bug in qncmmva: utilization for M/M/m centers was not
+   correctly scaled to [0,1] when m>1
+
+** Added warning to qncsmva and qncmmva to detect and report numerical
+   instability problems
+
+
 Summary of important user-visible changes for queueing-1.2.1
 ------------------------------------------------------------------------------
 
